Fix overflow in columns

--- a/src/static/css/index.scss
+++ b/src/static/css/index.scss
@@ -20,6 +20,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  ::-webkit-scrollbar {display:none;}
 }
 
 code {
